--- a/src/partials/!example-newscard-markup.html
+++ b/src/partials/!example-newscard-markup.html
@@ -14,25 +14,27 @@
 				alt="${results[i].media.length == 0 ? DEFAULT_CAPTION : results[i].media[0].caption}" width="288"
 				height="395" />
 
-			<p class="news-card__category">${results[i].section}</p>
+			<div>
+				<p class="news-card__category">${results[i].section}</p>
 
-			<button type="button" class="js-to-fav">
-				<p class="news-card__add-favorite">Add to favorite</p>
+				<button type="button" class="js-to-fav">
+					<p class="news-card__add-favorite">Add to favorite</p>
 
-				<svg class="news-card__icon" viewBox="0 0 32 32" width="16" height="16">
-					<path fill="none" stroke="#4440f7"
-						d="M9.331 4c-3.681 0-6.667 2.955-6.667 6.6 0 2.943 1.167 9.927 12.651 16.987 0.206 0.125 0.442 0.191 0.683 0.191s0.477-0.066 0.683-0.191c11.484-7.060 12.651-14.044 12.651-16.987 0-3.645-2.985-6.6-6.667-6.6s-6.667 4-6.667 4-2.985-4-6.667-4z">
-					</path>
-				</svg>
-			</button>
+					<svg class="news-card__icon" viewBox="0 0 32 32" width="16" height="16">
+						<path fill="none" stroke="#4440f7"
+							d="M9.331 4c-3.681 0-6.667 2.955-6.667 6.6 0 2.943 1.167 9.927 12.651 16.987 0.206 0.125 0.442 0.191 0.683 0.191s0.477-0.066 0.683-0.191c11.484-7.060 12.651-14.044 12.651-16.987 0-3.645-2.985-6.6-6.667-6.6s-6.667 4-6.667 4-2.985-4-6.667-4z">
+						</path>
+					</svg>
+				</button>
 
-			<h3 class="news-card__title">${results[i].title}</h3>
+				<h3 class="news-card__title">${results[i].title}</h3>
 
-			<p class="news-card__text">${results[i].abstract}</p>
+				<p class="news-card__text">${results[i].abstract}</p>
 
-			<div class="news-card__details">
-				<a class="news-card__date-link link" href="">${results[i].updated}</a>
-				<a class="news-card__news-link link" href="${results[i].url}" target="_blank">Read more</a>
+				<div class="news-card__details">
+					<span class="news-card__date">${dateForRender}</span>
+					<a class="news-card__news-link link" href="${results[i].url}" target="_blank">Read more</a>
+				</div>
 			</div>
 		</div>
 	</li>
