pagination on the page

--- a/src/partials/newsgrid.html
+++ b/src/partials/newsgrid.html
@@ -4,8 +4,13 @@
     <ul class="list-news js-list-new">
       <!-- место для динамического списка -->
     </ul>
-    <div class="page-container">
-      <div class="pages">
+
+          <!-- Кастомна пагінація від Макса -->
+          <div class="pagination">
+            <ul> <!--pages or li are comes from javascript --> </ul>
+          </div>
+    <!-- <div class="page-container"> -->
+      <!-- <div class="pages">
         <button type="button" class="pages__btn btn-prev">
           <svg class="btn-prev__icon">
             <use href="./images/sprite.svg#icon-pagination-previous"></use>
@@ -33,12 +38,8 @@
             <use href="./images/sprite.svg#icon-pagination-next"></use>
           </svg>
         </button>
-      </div>
-      <!-- Кастомна пагінація від Макса -->
-		<div class="pagination">
-			<ul> <!--pages or li are comes from javascript --> </ul>
-		</div>
-    </div>
+      </div> -->
+    <!-- </div> -->
   </div>
 </section>
 
