--- a/src/sass/_favourite.scss
+++ b/src/sass/_favourite.scss
@@ -32,8 +32,8 @@
 	}
 }
 
-.add-fav-btn,
-.js-from-fav {
+.add-fav-btn {
+//.js-from-fav 
 	// position: absolute;
 	// top: 35%;
 	// right: 8px;
@@ -47,15 +47,15 @@
 	// height: 28px;
 	// width: 168px;
 
-	// background-color: $light;
-	// border-radius: 20px;
+	background-color: $light;
+	border-radius: 20px;
 
-	// color: $text;
-	// font-family: Manrope, sans-serif;
-	// font-size: 12px;
-	// font-weight: 500;
-	// line-height: 1.4;
-	// text-align: center;
+	 color: $text;
+	 font-family: Manrope, sans-serif;
+	 font-size: 12px;
+	 font-weight: 500;
+	 line-height: 1.4;
+	 text-align: center;
 }
 
 /*.news-card__add-favorite,
@@ -74,9 +74,9 @@
 
 }*/
 
-.news-card__icon {
+//.news-card__icon {
 	// display: inline-block;
 	// position: absolute;
 	// top: 36%;
 	// right: 6%;
-}
+//}
