fixed weather flex

--- a/src/sass/_weather.scss
+++ b/src/sass/_weather.scss
@@ -8,6 +8,7 @@ $txt-roboto: 'Roboto';
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   width: 288px;
   height: 469px;
   border-radius: 4px;
