started markup of pagination

--- a/src/partials/newsgrid.html
+++ b/src/partials/newsgrid.html
@@ -1,16 +1,76 @@
 <section class="newsgrid">
-  <h2 class="visually-hidden">News list</h2>
-  <div class="container news__container">
-    <ul class="list-news js-list-new">
-      <!-- место для динамического списка -->
-    </ul>
+	<h2 class="visually-hidden">News list</h2>
+	<div class="container news__container">
+		<ul class="list-news js-list-new">
+			<!-- место для динамического списка -->
+		</ul>
 
-          <!-- Кастомна пагінація від Макса -->
-          <div class="pagination">
-            <ul> <!--pages or li are comes from javascript --> </ul>
-          </div>
-    <!-- <div class="page-container"> -->
-      <!-- <div class="pages">
+
+
+
+
+		<!-- Кастомна пагінація від Макса -->
+		<div class="pagination">
+			<ul class="pagination__list">
+				<!-- 
+
+				<li class="pagination__item-numb">
+					<button class="pagination__btn-numb current">
+						1
+					</button>
+				</li>
+
+				<li class="pagination__item-numb">
+					<button class="pagination__btn-numb">
+						2
+					</button>
+				</li>
+
+				<li class="pagination__item-dots">
+					<span class="pagination__dots">
+						...
+					</span>
+				</li>
+
+				<li class="pagination__item-numb">
+					<button class="pagination__btn-numb">
+						4
+					</button>
+				</li>
+
+				<li class="pagination__item-numb">
+					<button class="pagination__btn-numb">
+						5
+					</button>
+				</li>
+
+				<li class="pagination__item-dots">
+					<span class="pagination__dots">
+						...
+					</span>
+				</li>
+
+				<li class="pagination__item-numb">
+					<button class="pagination__btn-numb">
+						7
+					</button>
+				</li>
+
+				<li class="pagination__item">
+					<button class="pagination__btn next">
+						<span class="pagination__text">Next</span>
+						<svg class="pagination__icon" width="24" height="24">
+							<use href="./images/sprite.svg#icon-pagination-next"></use>
+						</svg>
+					</button>
+				</li> -->
+			</ul>
+		</div>
+
+
+
+		<!-- <div class="page-container"> -->
+		<!-- <div class="pages">
         <button type="button" class="pages__btn btn-prev">
           <svg class="btn-prev__icon">
             <use href="./images/sprite.svg#icon-pagination-previous"></use>
@@ -39,7 +99,6 @@
           </svg>
         </button>
       </div> -->
-    <!-- </div> -->
-  </div>
+		<!-- </div> -->
+	</div>
 </section>
-
