--- a/src/sass/utils/_dark-theme.scss
+++ b/src/sass/utils/_dark-theme.scss
@@ -1,3 +1,8 @@
+body {
+	transition: background-color 250ms ease, color 250ms ease, stroke 250ms ease, fill 250ms ease,
+		border-color 250ms ease;
+}
+
 body.dark {
 	background-color: $dark-theme-bg;
 	color: $dark-theme-text;
