--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -263,6 +263,8 @@ body.locked {
 	cursor: pointer;
 	overflow: hidden;
 
+	transition: background-color 250ms ease, border 250ms ease;
+
 	&::before {
 		content: "";
 		position: absolute;
