--- a/src/partials/newsgrid.html
+++ b/src/partials/newsgrid.html
@@ -5,10 +5,27 @@
 			<!-- место для динамического списка -->
 		</ul>
 
-		<!-- Кастомна пагінація від Макса -->
-		<div class="pagination">
-			<ul class="pagination__list">
-				<!-- 
+		<div class="page-container">
+			<button class="first-page" disabled>
+				<i class="fas fa-angle-double-left"></i>
+			</button>
+			<button class="prev-page" disabled>
+				<i class="fas fa-angle-left"></i>
+			</button>
+			<div id="pagination"></div>
+			<button class="next-page">
+				<i class="fas fa-angle-right"></i>
+			</button>
+			<button class="last-page">
+				<i class="fas fa-angle-double-right"></i>
+			</button>
+		</div>
+	</div>
+
+	<!-- Кастомна пагінація від Макса -->
+	<!-- <div class="pagination">
+			<ul class="pagination__list"> -->
+	<!-- 
 
 				
 
@@ -50,41 +67,7 @@
 
 				
 		 -->
-			</ul>
-		</div>
+	<!-- </ul>
+		</div> -->
 
-
-
-		<!-- <div class="page-container"> -->
-		<!-- <div class="pages">
-        <button type="button" class="pages__btn btn-prev">
-          <svg class="btn-prev__icon">
-            <use href="./images/sprite.svg#icon-pagination-previous"></use>
-          </svg>
-          <span class="pages__btn-text">Prew</span>
-        </button>
-        <div class="pages__numbers">
-          <ul class="pages__numbers-list">
-            <li class="pages__numbers-item">
-              <button class="pages__numbers-btn current" type="button">
-                1
-              </button>
-            </li>
-            <li class="pages__numbers-item">
-              <button class="pages__numbers-btn" type="button">2</button>
-            </li>
-            <li class="pages__numbers-item">
-              <button class="pages__numbers-btn" type="button">3</button>
-            </li>
-          </ul>
-        </div>
-        <button type="button" class="pages__btn btn-next">
-          <span class="pages__btn-text">Next</span>
-          <svg class="btn-next__icon">
-            <use href="./images/sprite.svg#icon-pagination-next"></use>
-          </svg>
-        </button>
-      </div> -->
-		<!-- </div> -->
-	</div>
 </section>
