--- a/src/sass/_pagination-v2.scss
+++ b/src/sass/_pagination-v2.scss
@@ -1,27 +1,33 @@
 .page-container {
 	display: flex;
 	align-items: center;
-	flex-wrap: wrap;
-	justify-content: flex-start;
-	margin-top: 2rem;
-	background-color: #fff;
-	box-shadow: 0 0 10px #d3d3d3;
-	border-radius: 5px;
-	padding: 10px 15px;
+	justify-content: center;
 }
-.page-container i {
-	padding: 6px 12px;
+
+.page-container button {
+	width: 82px;
+	height: 31px;
+	padding: 4px 12px 5px;
 	cursor: pointer;
 	font-size: 18px;
 	color: var(--color-dark);
-	pointer-events: none;
-}
-.page-container button {
-	cursor: pointer;
+	// pointer-events: none;
+
 	background-color: transparent;
 	border: none;
+	background-color: $dark-theme-text;
+	border: 1px solid $accent;
+	border-radius: 2px;
 }
-.page-container button:disabled i {
+.prev-page{
+	margin-right: 4px;
+}
+
+.next-page{
+	margin-left: 4px;
+}
+
+.page-container button:disabled {
 	color: #aaadc7;
 }
 
@@ -32,79 +38,93 @@
 }
 #pagination li {
 	list-style: none;
-	cursor: pointer;
-	border-radius: 5px;
-	overflow: hidden;
-	margin: 0 3px;
+	height: 31px;
+	width: 33px;
+	margin: 0 4px;
+	background-color: $dark-theme-text;
+	border: 1px solid $accent;
+	border-radius: 2px;
+
 }
-#pagination li.active {
-	background-color: #39f;
-}
-#pagination li.active a {
-	color: #fff;
-}
-#pagination li a {
-	text-decoration: none;
-	font-weight: 600;
-	padding: 8px 13px;
-	display: inline-block;
-	line-height: 1;
-	color: #a9a9a9;
-	font-size: 20px;
-	pointer-events: none;
-}
+#pagination li.active,
 #pagination li:hover {
-	background-color: #39f;
+	background-color: #4440f6;
 }
+#pagination li.active a,
 #pagination li:hover a {
 	color: #fff;
 }
-
-.settings {
-	padding-top: 3rem;
-	display: flex;
-	align-items: flex-start;
-}
-.settings .form-input {
-	margin-bottom: 1rem;
-}
-.settings .form-input:not(:last-child) {
-	margin-right: 3rem;
-}
-.settings .form-input > label {
-	margin-bottom: 10px;
-}
-.settings .form-input label {
-	font-size: 18px;
-	font-weight: 600;
+#pagination li a {
 	display: block;
+			height: 31px;
+			width: 33px;
+	list-style: none;
+		padding-top: 4px;
+		padding-bottom: 5px;
+		text-align: center;
+		font-size: 16px;
+		line-height: 1.375;
+		font-weight: 500;
+		cursor: pointer;
+		// user-select: none;
+		// transition: all 0.3s ease;
 }
-.settings .form-input > input {
-	width: 100%;
-}
-.settings .form-input input {
-	font-size: 18px;
-	outline: none;
-	padding: 10px 17px;
-	border-radius: 5px;
-	border: 1px solid #b6b6b6;
-}
-.settings .wrapper-form-check {
-	display: flex;
-}
-.settings .wrapper-form-check .form-check {
-	display: flex;
-	line-height: 1;
-	align-items: center;
-}
-.settings .wrapper-form-check .form-check:not(:last-child) {
-	margin-right: 10px;
-}
-.settings .wrapper-form-check label {
-	margin-left: 10px;
-}
-@media (max-width: 992px) {
-	.settings {
-		flex-direction: column;
-	}
-}
+// #pagination li:hover {
+// 	background-color: #39f;
+// }
+// #pagination li:hover a {
+// 	color: #fff;
+// }
+
+// .settings {
+// 	padding-top: 3rem;
+// 	display: flex;
+// 	align-items: flex-start;
+// }
+// .settings .form-input {
+// 	margin-bottom: 1rem;
+// }
+// .settings .form-input:not(:last-child) {
+// 	margin-right: 3rem;
+// }
+// .settings .form-input > label {
+// 	margin-bottom: 10px;
+// }
+// .settings .form-input label {
+// 	font-size: 18px;
+// 	font-weight: 600;
+// 	display: block;
+// }
+// .settings .form-input > input {
+// 	width: 100%;
+// }
+// .settings .form-input input {
+// 	font-size: 18px;
+// 	outline: none;
+// 	padding: 10px 17px;
+// 	border-radius: 5px;
+// 	border: 1px solid #b6b6b6;
+// }
+// .settings .wrapper-form-check {
+// 	display: flex;
+// }
+// .settings .wrapper-form-check .form-check {
+// 	display: flex;
+// 	line-height: 1;
+// 	align-items: center;
+// }
+// .settings .wrapper-form-check .form-check:not(:last-child) {
+// 	margin-right: 10px;
+// }
+// .settings .wrapper-form-check label {
+// 	margin-left: 10px;
+// }
+// @media (max-width: 992px) {
+// 	.settings {
+// 		flex-direction: column;
+// 	}
+// }
+
+// *{
+// 	outline: 1px solid tomato;
+// }
