--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,7 +9,7 @@
 @import "./header";
 @import "./mobile-menu";
 @import "./calendar";
-@import "./pagination_m";
+// @import "./pagination_m";
 @import "./favourite";
 @import "./read-page";
 @import "./weather";
