--- a/src/sass/_pagination-v2.scss
+++ b/src/sass/_pagination-v2.scss
@@ -1,65 +1,3 @@
-// .page-container button {
-// 	width: 82px;
-// 	height: 31px;
-
-// 	color: var(--color-dark);
-
-// 	pointer-events: none;
-
-// 	background-color: transparent;
-// 	border: none;
-// }
-// .prev-page {
-// 	margin-right: 4px;
-// }
-
-// .next-page {
-// 	margin-left: 4px;
-// }
-
-// .page-container button:disabled {
-// 	color: #aaadc7;
-// }
-
-// #pagination {
-// }
-// #pagination li {
-// 	list-style: none;
-// 	height: 31px;
-// 	width: 33px;
-// 	margin: 0 4px;
-// 	background-color: $dark-theme-text;
-// 	border: 1px solid $accent;
-// 	border-radius: 2px;
-// }
-// #pagination li.active,
-// #pagination li:hover {
-// 	background-color: #4440f6;
-// }
-// #pagination li.active a,
-// #pagination li:hover a {
-// 	color: #fff;
-// }
-// #pagination li a {
-// 	display: flex;
-// 	justify-content: center;
-// 	align-items: center;
-// 	height: 31px;
-// 	width: 33px;
-// 	// list-style: none;
-// 	// padding-top: 4px;
-// 	// padding-bottom: 5px;
-// 	// text-align: center;
-// 	font-size: 16px;
-// 	line-height: 1.375;
-// 	font-weight: 500;
-// 	cursor: pointer;
-
-// 	color: $text;
-// 	// user-select: none;
-// 	// transition: all 0.3s ease;
-// }
-
 // !------------------------------------------------------------------
 .page-container {
 	display: flex;
@@ -122,14 +60,31 @@
 
 	width: 33px;
 	height: 31px;
+}
+
+.pg-item.active,
+.pg-item:hover {
+	opacity: 1;
+	color: $dark-theme-text;
+	border-radius: 2px;
+	background-color: $accent;
+}
+
+.pg-link {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	width: 33px;
+	height: 31px;
+
 	border: 1px solid $accent;
 	border-radius: 2px;
 	background-color: $dark-theme-text;
 	color: $text;
 }
-
-.pg-item.active,
-.pg-item:hover {
+.pg-link.active,
+.pg-link:hover {
 	opacity: 1;
 	color: $dark-theme-text;
 	border-radius: 2px;
@@ -141,63 +96,3 @@
 .next-page {
 }
 // !------------------------------------------------------------------
-
-// #pagination li:hover {
-// 	background-color: #39f;
-// }
-// #pagination li:hover a {
-// 	color: #fff;
-// }
-
-// .settings {
-// 	padding-top: 3rem;
-// 	display: flex;
-// 	align-items: flex-start;
-// }
-// .settings .form-input {
-// 	margin-bottom: 1rem;
-// }
-// .settings .form-input:not(:last-child) {
-// 	margin-right: 3rem;
-// }
-// .settings .form-input > label {
-// 	margin-bottom: 10px;
-// }
-// .settings .form-input label {
-// 	font-size: 18px;
-// 	font-weight: 600;
-// 	display: block;
-// }
-// .settings .form-input > input {
-// 	width: 100%;
-// }
-// .settings .form-input input {
-// 	font-size: 18px;
-// 	outline: none;
-// 	padding: 10px 17px;
-// 	border-radius: 5px;
-// 	border: 1px solid #b6b6b6;
-// }
-// .settings .wrapper-form-check {
-// 	display: flex;
-// }
-// .settings .wrapper-form-check .form-check {
-// 	display: flex;
-// 	line-height: 1;
-// 	align-items: center;
-// }
-// .settings .wrapper-form-check .form-check:not(:last-child) {
-// 	margin-right: 10px;
-// }
-// .settings .wrapper-form-check label {
-// 	margin-left: 10px;
-// }
-// @media (max-width: 992px) {
-// 	.settings {
-// 		flex-direction: column;
-// 	}
-// }
-
-// *{
-// 	outline: 1px solid tomato;
-// }
