--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
 	<div class="container footer__container">
 		<p class="footer__copy">&#169; Code Forge</p>
 
-		<div class="footer__auth">
+		<!-- <div class="footer__auth">
 			<div class="sign-up-wrapper">
 				<button class="auth__open btn__sign-up" type="button">Sign up</button>
 				<form class="footer__form form-sign-up">
@@ -34,6 +34,6 @@
 			</div>
 
 			<button class="auth__btn-sign-out" type="button">Sign Out</button>
-		</div>
+		</div> -->
 	</div>
 </footer>
